--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,10 @@
 [submodule "lib/v2-core"]
 	path = lib/v2-core
 	url = https://github.com/sablier-labs/v2-core
+[submodule "lib/openzeppelin-contracts-v4"]
+	path = lib/openzeppelin-contracts-v4
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "lib/prb-math"]
+	path = lib/prb-math
+	url = https://github.com/PaulRBerg/prb-math
+	branch = release-v4
