--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 	path = lib/prb-math
 	url = https://github.com/PaulRBerg/prb-math
 	branch = release-v4
+[submodule "lib/murky"]
+	path = lib/murky
+	url = https://github.com/dmfxyz/murky
