--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,8 @@
     "solady/=lib/v2-periphery/node_modules/solady/",
     "solarray/=lib/v2-core/node_modules/solarray/",
     "v2-core/=lib/v2-core/src/",
-    "v2-periphery/=lib/v2-periphery/src/"
+    "v2-periphery/=lib/v2-periphery/src/",
+    "murky/=lib/murky/"
   ],
   "editor.formatOnSave": true,
   "[solidity]": {
